--- a/src/examples/titlePane/index.html
+++ b/src/examples/titlePane/index.html
@@ -9,15 +9,16 @@
 		}
 
 		.main-app {
-			border-color: #34495e;
-			border-style: solid;
-			border-width: 1px;
+			margin: 20px;
+			width: 800px;
 		}
 	</style>
 </head>
 
 <body>
 	<script src="../../../../node_modules/@dojo/loader/loader.min.js"></script>
+	<!-- TODO: should come from project dependency -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/maquette/2.4.2/css-transitions.min.js"></script>
 	<script>
 		require.config({
 			baseUrl: '../../../../',
